--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item text-center rounded overflow-hidden">
-                        <img class="img-fluid" src="/baker-1.0.0/baker-1.0.0/img/pic/תעודת סיום ריסים.jpg" alt="">
+                        <img class="img-fluid" src="img//pic/תעודת סיום ריסים.jpg" alt="">
                         <div class="team-text">
                             <div class="team-title">
                                 <h5>תעודת הכשרה</h5>
