--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>0532733353</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>Suzanaya111@gmail.com</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-square btn-outline-light rounded-circle me-1" href="https://wa.me/0532733353"><i class="fab fa-whatsapp w3-hover-opacity" target="_blank"></i></a>
+                        <a class="btn btn-square btn-outline-light rounded-circle me-1" href="https://wa.me/+972532733353"><i class="fab fa-whatsapp w3-hover-opacity" target="_blank"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-0" href="https://instagram.com/suzana_pinhasi?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
                         <!-- <a class="btn btn-square btn-outline-light rounded-circle me-0" href=https://api.whatsapp.com/send?phone=532733353&text=%D7%94%D7%99%D7%99,%20%D7%AA%D7%A8%D7%A6%D7%99%20%D7%9C%D7%A7%D7%91%D7%9C%20%D7%A4%D7%A8%D7%98%D7%99%D7%9D%20%D7%90%D7%95%20%D7%9C%D7%A7%D7%91%D7%95%D7%A2%20%D7%AA%D7%95%D7%A8?><i class="fab fa-whatsapp w3-hover-opacity" target="_blank"></i></a> -->
                         <div class="white">
