--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav mx-auto p-4 p-lg-0">
-                <a href="#" class="nav-item nav-link active">הלחמת ריסים</a>
+                <a href="#" class="nav-item nav-link active">שזירת ריסים</a>
                 <a href="#" class="nav-item nav-link">מניקור && פדיקור</a>
                 <a href="#" class="nav-item nav-link">לק ג'ל</a>
                 <!-- <div class="nav-item dropdown"> -->
@@ -93,12 +93,13 @@
             </div>
             <div class=" d-none d-lg-flex">
                 <div class="flex-shrink-0 btn-lg-square border border-light rounded-circle">
-                    <i class="fa fa-phone text-primary"></i>
+                    <a class="btn btn-square btn-light rounded-circle" href="https://wa.me/+972532733353"><i class="fa fa-phone text-primary"></i></a>
+                    <!-- <i class="fa fa-phone text-primary"></i> -->
                 </div>
                 <div class="ps-3">
-                    <small class="text-primary mb-0">
-                        לקביעת תורים סוזנה פנחסי
-                    </small>
+                    <div class="text-primary mb-0">
+                     לקביעת תורים סוזנה פנחסי
+                    </div>
                     <p class="text-light fs-5 mb-0">0532733353</p>
                 </div>
             </div>
@@ -171,7 +172,7 @@
                 </div>
             </div>
             <div class="owl-carousel-item position-relative">
-                <img class="img-fluid" src="img//pic/ לפני אחרי 1.jpg" alt="">
+                <img class="img-fluid" src="img//pic/ריסים לפני אחרי 1.jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
                         <div class="row justify-content-start">
@@ -439,7 +440,7 @@
                                 <!-- <a class="btn btn-square btn-light rounded-circle" href=""><i class="fab fa-facebook-f"></i></a> -->
                                 <!-- <a class="btn btn-square btn-light rounded-circle" href=""><i class="fab fa-twitter"></i></a> -->
                                 <!-- <a class="btn btn-square btn-light rounded-circle" href=""><i class="fab fa-instagram"></i></a> -->
-                                <a class="btn btn-square btn-light rounded-circle" href="https://wa.me/0532733353?text=%D7%94%D7%99%D7%99%2C%20%D7%AA%D7%A8%D7%A6%D7%99%20%D7%9C%D7%A7%D7%91%D7%9C%20%D7%A4%D7%A8%D7%98%D7%99%D7%9D%2F%D7%9C%D7%A7%D7%91%D7%95%D7%A2%20%D7%AA%D7%95%D7%A8%3F"><i class="fab fa-whatsapp"></i></a>
+                                <a class="btn btn-square btn-light rounded-circle" href="https://wa.me/+972532733353"><i class="fab fa-whatsapp"></i></a>
                                 לפרטים נוספים
                             </div>
                         </div>
@@ -457,7 +458,7 @@
                                 <!-- <a class="btn btn-square btn-light rounded-circle" href=""><i class="fab fa-facebook-f"></i></a> -->
                                 <!-- <a class="btn btn-square btn-light rounded-circle" href=""><i class="fab fa-twitter"></i></a> -->
                                 <!-- <a class="btn btn-square btn-light rounded-circle" href=""><i class="fab fa-instagram"></i></a> -->
-                                <a class="btn btn-square btn-light rounded-circle" href="https://wa.me/0532733353?text=%D7%94%D7%99%D7%99%2C%20%D7%AA%D7%A8%D7%A6%D7%99%20%D7%9C%D7%A7%D7%91%D7%9C%20%D7%A4%D7%A8%D7%98%D7%99%D7%9D%2F%D7%9C%D7%A7%D7%91%D7%95%D7%A2%20%D7%AA%D7%95%D7%A8%3F"><i class="fab fa-whatsapp"></i></a>
+                                <a class="btn btn-square btn-light rounded-circle" href="https://wa.me/+972532733353"><i class="fab fa-whatsapp"></i></a>
                                 לפרטים נוספים
                             </div>
                         </div>
@@ -474,7 +475,7 @@
                             <div class="team-social">
                                 <!-- לפרטים נוספים -->
                                 <!-- <a class="btn btn-square btn-light rounded-circle" href=""><i class="fab fa-facebook-f"></i></a> -->
-                                <a class="btn btn-square btn-light rounded-circle" href="https://wa.me/0532733353?text=%D7%94%D7%99%D7%99%2C%20%D7%AA%D7%A8%D7%A6%D7%99%20%D7%9C%D7%A7%D7%91%D7%9C%20%D7%A4%D7%A8%D7%98%D7%99%D7%9D%2F%D7%9C%D7%A7%D7%91%D7%95%D7%A2%20%D7%AA%D7%95%D7%A8%3F"><i class="fab fa-whatsapp"></i></a>
+                                <a class="btn btn-square btn-light rounded-circle" href="https://wa.me/+972532733353"><i class="fab fa-whatsapp"></i></a>
                                 <!-- <a class="btn btn-square btn-light rounded-circle" href=""><i class="fab fa-instagram"></i></a> -->
                                 לפרטים נוספים
                             </div>
